# CMakeLearn

./: .gitignore  CMakeLists.txt  LICENSE  README  _msg.h  git-info.txt  main.c  msg.c  msg.h  msgBeautiful.c
cmake/: FindPythonSelf.cmake  custom_target_test.cmake  install_info.cmake  print_info.cmake
cmake/CMakeFindExternalProject/: InstallDir.cmake
include/: msg.h
msg/: CMakeLists.txt  _msg.h
test/: CMakeLists.txt  build_test.c  test1.c  test_fail.c
